--- a/Site/Demo/public/index.html
+++ b/Site/Demo/public/index.html
@@ -120,28 +120,30 @@
   const btnCancelPayment = document.querySelector('#btn-cancelPayment')
   const stripe = Stripe("pk_live_51O9azOCJmlrAlGBoAojhLshRHV3rr5qqUXrdG13NYxbpkfLU69WVgypk06ZiARta7y7LSA3wEhbJNf2K6CvWP5Wf00trRX4rYy")
 
-  function CheckIsPwa() {
-    function isInStandaloneMode() {
-      var displayModes = ["fullscreen", "standalone", "minimal-ui"];
-      const res =  displayModes.some((displayMode) => window.matchMedia('(display-mode: ' + displayMode + ')').matches);
-      return res
-    }
-    const isIOS = /iPhone|iPad|iPod/.test(navigator.userAgent);
-    const isAndroid = /Android/.test(navigator.userAgent);
-    const isOnPC = !isIOS && !isAndroid;
-    if(!isOnPC && !isInStandaloneMode()){
-      document.getElementById('unity-container').style.display = 'none'
-      document.getElementById('pwa-msg').style.display = 'flex'
-      document.getElementById('pwa-msg').style.height = '100vh'
-      document.getElementById('pwa-msg').style.justifyContent = 'center'
-      document.getElementById('pwa-msg').style.backgroundImage = `url('./TemplateData/bg.png')`
-      document.getElementById('pwa-msg').style.backgroundPosition = 'center';
-      document.getElementById('pwa-msg').style.backgroundRepeat = 'no-repeat';
-      document.getElementById('pwa-msg').style.backgroundSize = 'cover';
-      return true
-    }
-    return false
+function CheckIsPwa() {
+  function isInStandaloneMode() {
+    var displayModes = ["fullscreen", "standalone", "minimal-ui"];
+    const res =  displayModes.some((displayMode) => window.matchMedia('(display-mode: ' + displayMode + ')').matches);
+    return res;
   }
+  const isIOS = /iPhone|iPad|iPod/.test(navigator.userAgent);
+  const isAndroid = /Android/.test(navigator.userAgent);
+  const isOnPC = !isIOS && !isAndroid;
+  if (isOnPC) {
+    document.getElementById('pwa-msg').style.display = 'none'; // Hide the PWA message if on PC
+  } else if (!isInStandaloneMode()) {
+    document.getElementById('unity-container').style.display = 'none';
+    document.getElementById('pwa-msg').style.display = 'flex';
+    document.getElementById('pwa-msg').style.height = '100vh';
+    document.getElementById('pwa-msg').style.justifyContent = 'center';
+    document.getElementById('pwa-msg').style.backgroundImage = `url('./TemplateData/bg.png')`;
+    document.getElementById('pwa-msg').style.backgroundPosition = 'center';
+    document.getElementById('pwa-msg').style.backgroundRepeat = 'no-repeat';
+    document.getElementById('pwa-msg').style.backgroundSize = 'cover';
+    return true;
+  }
+  return false;
+}
 
   function SetUserId(id){
     userId = id
